--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3882,9 +3882,9 @@ input, select, textarea {
 	#intro {
 		background-attachment: fixed;
 		background-image: url("images/bg.jpg");
-		background-position: top right;
+		background-position: top left;
 		background-repeat: no-repeat;
-		background-size: 100% 100%;
+		background-size: cover;
 	}
 
 		#intro p {
