--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3916,7 +3916,8 @@ input, select, textarea {
 
 		}
 
-/* Three image containers (use 25% for four, and 50% for two, etc) */
+/* Image columns */
+
 .column-header {
 	float: left;
 	width: 33.33%;
@@ -3944,6 +3945,10 @@ input, select, textarea {
   align-items: stretch;
 }
 
+/* --- */
+
+/* Images that need resizing */
+
 #resize-image {
 	width: 70%;
 }
@@ -3964,6 +3969,34 @@ input, select, textarea {
 	width: auto;
 }
 
+/* --- */
+
+/* Fix line break for welcome screen */
+
 #loc {
 	display: inline-block;
 }
+
+/* --- */
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #FFF;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.1);
+}
+::-webkit-scrollbar-thumb {
+    background: #CCC;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.2);
+ }
+::-webkit-scrollbar-thumb:hover {
+    background: #AAA;
+}
+::-webkit-scrollbar-thumb:active {
+    background: #888;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.3);
+}
+
+/* --- */
