--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4019,17 +4019,32 @@ input, select, textarea {
   left: 0;
   z-index: 1;
 }
+
+.open{
+	pointer-events: auto!important;
+  	visibility: visible!important;
+}
+
+.visible1{
+	transform: scale(1)!important;
+  	transition-duration: 0.75s;
+}
+
+.visible2{
+	opacity: 1!important;
+  	transition: opacity 0.4s ease 0.4s;
+}
 .outer-menu .checkbox-toggle {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 2;
   cursor: pointer;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   opacity: 0;
 }
-.outer-menu .checkbox-toggle:checked + .hamburger > div {
+/*.outer-menu .checkbox-toggle:checked + .hamburger > div {
   transform: rotate(135deg);
 }
 .outer-menu .checkbox-toggle:checked + .hamburger > div:before,
@@ -4039,7 +4054,8 @@ input, select, textarea {
 }
 .outer-menu .checkbox-toggle:checked + .hamburger > div:after {
   opacity: 0;
-}
+}*/
+/*
 .outer-menu .checkbox-toggle:checked ~ .menu {
   pointer-events: auto;
   visibility: visible;
@@ -4051,13 +4067,13 @@ input, select, textarea {
 .outer-menu .checkbox-toggle:checked ~ .menu > div > div {
   opacity: 1;
   transition: opacity 0.4s ease 0.4s;
-}
-.outer-menu .checkbox-toggle:hover + .hamburger {
+}*/
+/*.outer-menu .checkbox-toggle:hover + .hamburger {
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .outer-menu .checkbox-toggle:checked:hover + .hamburger > div {
   transform: rotate(225deg);
-}
+}*/
 .outer-menu .hamburger {
   position: absolute;
   top: 0;
@@ -4180,5 +4196,13 @@ input, select, textarea {
   transition: width 0.4s ease;
 }
 
+		@media screen and (min-width: 736px) {
+			.outer-menu {
+				display: none;
+			}
 
+			.hamburger {
+				display: none;
+			}
+		}
 /* --- */
