--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4043,6 +4043,8 @@ input, select, textarea {
   width: 50px;
   height: 50px;
   opacity: 0;
+  padding: 0;
+  margin: 0;
 }
 /*.outer-menu .checkbox-toggle:checked + .hamburger > div {
   transform: rotate(135deg);
